--- a/Angular/bytebank/src/app/extrato/extrato.component.html
+++ b/Angular/bytebank/src/app/extrato/extrato.component.html
@@ -1,19 +1,25 @@
-<table class="tabela">
-  <thead class="tabela__cabecalho">
-    <th class="tabela__cabecalho__conteudo">DATA</th>
-    <th class="tabela__cabecalho__conteudo">VALOR</th>
-    <th class="tabela__cabecalho__conteudo">DESTINO</th>
-  </thead>
+<section class="container">
+  <h2 class="titulo">Extrato de Transferências</h2>
 
-  <tbody *ngIf="!!transferencias; else nenhumaTransferencia">
-    <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
-      <td class="tabela__conteudo">{{ transferencia.data | date: "short" }}</td>
-      <td class="tabela__conteudo">{{ transferencia.valor | currency }}</td>
-      <td class="tabela__conteudo">{{ transferencia.destino }}</td>
-    </tr>
-  </tbody>
-</table>
+  <table class="tabela">
+    <thead class="tabela__cabecalho">
+      <th class="tabela__cabecalho__conteudo">DATA</th>
+      <th class="tabela__cabecalho__conteudo">VALOR</th>
+      <th class="tabela__cabecalho__conteudo">DESTINO</th>
+    </thead>
 
-<ng-template #nenhumaTransferencia>
-  <p>Nenhuma transferência cadastrada.</p>
-</ng-template>
+    <tbody *ngIf="!!transferencias; else nenhumaTransferencia">
+      <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
+        <td class="tabela__conteudo">
+          {{ transferencia.data | date: "short" }}
+        </td>
+        <td class="tabela__conteudo">{{ transferencia.valor | currency }}</td>
+        <td class="tabela__conteudo">{{ transferencia.destino }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <ng-template #nenhumaTransferencia>
+    <p>Nenhuma transferência cadastrada.</p>
+  </ng-template>
+</section>
