--- a/Angular/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/Angular/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
@@ -4,12 +4,12 @@
 
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor</label>
-      <input class="form-field__input" id="valor" type="number" name="valor" [(ngModel)]="valor"/>
+      <input placeholder="Valor" class="form-field__input" id="valor" type="number" name="valor" [(ngModel)]="valor"/>
     </div>
 
     <div class="form-field">
       <label class="form-field__label" for="destino">Destino</label>
-      <input class="form-field__input" id="destino" type="text" name="destino" [(ngModel)]="destino" />
+      <input placeholder="Destino" class="form-field__input" id="destino" type="text" name="destino" [(ngModel)]="destino" />
     </div>
 
     <div class="botao-wrapper">
