--- a/Angular/gatitobook/src/app/home/home.component.html
+++ b/Angular/gatitobook/src/app/home/home.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container" id="container">
   <div class="row">
-    <div class="col-md-8 mb-2 mt-5">
+    <div class="col-md-8 mb-2 mt-3">
       <img
+        id="img"
         class="img-fluid d-none d-sm-block"
         src="assets/imgs/home.jpg"
         alt="Imagem de um gato para a tela de boas vindas"
