Implementado a listagem de imagens na grade

--- a/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
@@ -2,10 +2,14 @@
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand">Gatito Book</a>
     <div *ngIf="user$ | async as usuario">
-      <div class="mr-1" *ngIf="usuario.name; else login">
+      <div *ngIf="usuario.name; else login">
         <i class="fa fa-user-circle mr-1"></i>
-        <a>{{ usuario.name }}</a>
-        <a class="mr-1" (click)="logout()">Logout</a>
+        <a class="mr-1">{{ usuario.name }}</a>
+        <i
+          class="fa fa-sign-out fa-2x mr-1"
+          aria-hidden="true"
+          (click)="logout()"
+        ></i>
       </div>
     </div>
   </nav>
