--- a/Angular/gatitobook/src/app/animais/grade-fotos-animais/grade-fotos-animais.component.html
+++ b/Angular/gatitobook/src/app/animais/grade-fotos-animais/grade-fotos-animais.component.html
@@ -2,22 +2,23 @@
 
 <div class="row">
   <div class="col-4" *ngFor="let animal of animais">
-    <a [routerLink]="['/animais', animal.id]"></a>
-    <app-cartao>
-      <app-animal
-        [url]="animal.url"
-        [descricao]="animal.description"
-      ></app-animal>
-      <span>
-        <i class="fa fa-heart-o fa-1x mr-2 ml-2" aria-hidden="true">
-          {{ animal.likes }}
-        </i>
-      </span>
-      <span>
-        <i class="fa fa-comment-o fa-1x mr-2 ml-2" aria-hidden="true">
-          {{ animal.comments }}
-        </i>
-      </span>
-    </app-cartao>
+    <a [routerLink]="['/animais', animal.id]">
+      <app-cartao>
+        <app-animal
+          [url]="animal.url"
+          [descricao]="animal.description"
+        ></app-animal>
+        <span>
+          <i class="fa fa-heart-o fa-1x mr-2 ml-2" aria-hidden="true">
+            {{ animal.likes }}
+          </i>
+        </span>
+        <span>
+          <i class="fa fa-comment-o fa-1x mr-2 ml-2" aria-hidden="true">
+            {{ animal.comments }}
+          </i>
+        </span>
+      </app-cartao>
+    </a>
   </div>
 </div>
