--- a/Angular/gatitobook/src/app/animais/detalhe-animal/detalhe-animal.component.html
+++ b/Angular/gatitobook/src/app/animais/detalhe-animal/detalhe-animal.component.html
@@ -8,10 +8,19 @@
       <small>
         <p class="text-left break-word">{{ animal.description }}</p>
 
-        <i (click)="curtir()" class="fa fa-heart-o fa-2x mr-2x pull-left">{{ animal.likes }}</i>
-        <i class="fa fa-comment-o fa-2x ml-2">{{ animal.comments }}</i>
-        <i (click)="excluir()" class="fa fa-trash-o fa-2x pull-right"></i>
+        <i (click)="curtir()" class="fa fa-heart-o fa-2x espaco"> {{
+          animal.likes
+        }}</i>
+        <i class="fa fa-comment-o fa-2x espaco"> {{ animal.comments }}</i>
+        <i (click)="excluir()" class="fa fa-trash-o fa-2x espaco"></i>
       </small>
+      <app-comentarios
+        [animalId]="animalId"
+        *ngIf="animal.allowComments; else warning"
+      ></app-comentarios>
+      <ng-template #warning>
+        <p>Usuário não pode comentar esta imagem.</p>
+      </ng-template>
     </div>
   </div>
 </div>
