--- a/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,12 +1,28 @@
 <header class="sticky-top">
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand">Gatito Book</a>
+    <a class="navbar-brand">
+      <i
+        class="fa fa-bars mr-2"
+        (click)="menu.abreMenu()"
+        (keyup.space)="menu.abreMenu()"
+      ></i>
+      Gatito Book
+    </a>
+
+    <app-menu #menu>
+      <ul class="list-unstyled">
+        <li>
+          <a [routerLink]="['animais', 'novo']">Novo Animal</a>
+        </li>
+      </ul>
+    </app-menu>
+
     <div *ngIf="user$ | async as usuario">
       <div *ngIf="usuario.name; else login">
         <i class="fa fa-user-circle mr-1"></i>
         <a class="mr-1">{{ usuario.name }}</a>
         <i
-          class="fa fa-sign-out fa-2x mr-1"
+          class="fa fa-sign-out fa-1x mr-1"
           aria-hidden="true"
           (click)="logout()"
         ></i>
@@ -19,4 +35,5 @@
       <a [routerLink]="['']">Login</a>
     </span>
   </ng-template>
+
 </header>
