--- a/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/Angular/gatitobook/src/app/componentes/cabecalho/cabecalho.component.html
@@ -5,9 +5,22 @@
         class="fa fa-bars mr-2"
         (click)="menu.abreMenu()"
         (keyup.space)="menu.abreMenu()"
-      ></i>
+      >
+      </i>
       Gatito Book
     </a>
+
+    <div class="ml-auto" *ngIf="user$ | async as usuario">
+      <div *ngIf="usuario.name; else login">
+        <i class="fa fa-user-circle user-login"></i>
+        <a>{{ usuario.name }}</a>
+        <i
+          class="fa fa-sign-out fa-1x user-login nav-link"
+          aria-hidden="true"
+          (click)="logout()"
+        ></i>
+      </div>
+    </div>
 
     <app-menu #menu>
       <ul class="list-unstyled">
@@ -17,17 +30,6 @@
       </ul>
     </app-menu>
 
-    <div *ngIf="user$ | async as usuario">
-      <div *ngIf="usuario.name; else login">
-        <i class="fa fa-user-circle mr-1"></i>
-        <a class="mr-1">{{ usuario.name }}</a>
-        <i
-          class="fa fa-sign-out fa-1x mr-1"
-          aria-hidden="true"
-          (click)="logout()"
-        ></i>
-      </div>
-    </div>
   </nav>
 
   <ng-template #login>
@@ -35,5 +37,4 @@
       <a [routerLink]="['']">Login</a>
     </span>
   </ng-template>
-
 </header>
