--- a/Angular/gatitobook/src/app/animais/novo-animal/novo-animal.component.html
+++ b/Angular/gatitobook/src/app/animais/novo-animal/novo-animal.component.html
@@ -67,7 +67,7 @@
         </button>
 
         <a
-          [routerLink]="['']"
+          [routerLink]="['/animais']"
           class="btn btn-secondary btn-block"
         >
           Cancelar
